--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Happy birthday to you, Zainab!! I hope your day is as amazing as you are.
-          You always brighten my world—especially when you laugh at my terrible jokes. 😜
+          Happy birthday to you, Zainab!  
+          I love the gentle melody of your voice that soothes my restless heart;  
+          the way your laughter dances through the air like wind-chimes in spring.  
+          I treasure the worlds you build in every book you hold,  
+          and the wisdom you weave between each page.  
+          I admire your kindness, your courage, your dreams—  
+          in short, I love everything that makes you, you. 
         </p>
         <p class="fake-btn">Send</p>
       </div>
